Sorting slider dissapears on mouseleave

--- a/index.html
+++ b/index.html
@@ -5,211 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SwiftDorms</title>
   </head>
-
-  <style>
-    /* search button shape and color */
-    .search-box {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      padding: 10px;
-      background-color: #f2f2f2;
-      text-align: center;
-    }
-
-    .search-box input {
-      width: 60%;
-      padding: 10px;
-      margin: 10px;
-      border: none;
-      font-size: 18px;
-    }
-
-    .search-box button {
-      padding: 10px 20px;
-      border: none;
-      background-color: #169c1b;
-      color: white;
-      font-size: 18px;
-    }
-
-    body {
-      font-family: sans-serif, Arial, Helvetica;
-    }
-    * {
-      box-sizing: border-box;
-    }
-
-    .sorting {
-      position: absolute;
-      padding: 10px 20px;
-      font-size: 18px;
-      top: 8%;
-      width: 100%;
-      right: 0%;
-      background-color: #f2f2f2;
-      text-align: center;
-    }
-
-    .sortBtn {
-      padding: 10px 200px;
-      border: none;
-      background-color: #848474;
-      color: white;
-      font-size: 18px;
-    }
-    .sortBtn:hover {
-      background-color: #656557;
-      color: #413333;
-    }
-
-    .sortOptions {
-      display: list-item;
-      position: absolute;
-      top: 100%;
-      left: 0%;
-      width: 100%;
-      padding: 10px;
-      background-color: #413333;
-      text-align: center;
-    }
-    .sortOptions a {
-      padding: 10px 20px;
-      border: none;
-      color: rgb(23, 196, 75);
-      font-size: 18px;
-    }
-    .sortOptions a:hover {
-      background-color: #f2f2f2;
-      color: #413333;
-    }
-    .sortOptions button {
-      padding: 10px 20px;
-      color: rgb(23, 196, 75);
-      font-size: 18px;
-      /* margin-right: 10%; */
-    }
-    .sorting:hover .sortOptions {
-      display: table;
-    }
-    /* shows rhe wrapper when disance sort btn is clicked */
-
-    .distanceSortBtn:hover + .wrapper {
-      display: block;
-    }
-
-    /* makes two sliders into one */
-    .wrapper {
-      position: absolute;
-      /* display: none; */
-      top: 210%;
-      width: 35%;
-      left: 35%;
-      background-color: #408ebe;
-      padding: 10px;
-      border-radius: 50px;
-    }
-    
-    .container {
-      position: relative;
-      width: 100%;
-      height: 100px;
-      margin-top: 10px;
-    }
-    input[type="range"] {
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      appearance: none;
-      width: 100%;
-      outline: none;
-      position: absolute;
-      margin: auto;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      background-color: transparent;
-      pointer-events: none;
-    }
-    .slider-track {
-      width: 100%;
-      height: 5%;
-      position: absolute;
-      margin: auto;
-      top: 0;
-      bottom: 0;
-      border-radius: 5%;
-    }
-    input[type="range"]::-webkit-slider-runnable-track {
-      -webkit-appearance: none;
-      height: 5%;
-    }
-    input[type="range"]::-moz-range-track {
-      -moz-appearance: none;
-      height: 5%;
-    }
-    input[type="range"]::-ms-track {
-      appearance: none;
-      height: 5%;
-    }
-    input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      height: 1.7em;
-      width: 1.7em;
-      background-color: #3264fe;
-      cursor: pointer;
-      margin-top: -9px;
-      pointer-events: auto;
-      border-radius: 50%;
-    }
-    input[type="range"]::-moz-range-thumb {
-      -webkit-appearance: none;
-      height: 1.7em;
-      width: 1.7em;
-      cursor: pointer;
-      border-radius: 50%;
-      background-color: #3264fe;
-      pointer-events: auto;
-    }
-    input[type="range"]::-ms-thumb {
-      appearance: none;
-      height: 1.7em;
-      width: 1.7em;
-      cursor: pointer;
-      border-radius: 50%;
-      background-color: #3264fe;
-      pointer-events: auto;
-    }
-    input[type="range"]:active::-webkit-slider-thumb {
-      background-color: #ffffff;
-      border: 3px solid #3264fe;
-    }
-    .values {
-      background-color: #3264fe;
-      width: 32%;
-      position: relative;
-      margin: auto;
-      padding: 10px 0;
-      border-radius: 5px;
-      text-align: center;
-      font-weight: 500;
-      font-size: 25px;
-      color: #ffffff;
-    }
-    .values:before {
-      content: "";
-      position: absolute;
-      height: 0;
-      width: 0;
-      border-top: 15px solid #3264fe;
-      border-left: 15px solid transparent;
-      border-right: 15px solid transparent;
-      margin: auto;
-      bottom: -14px;
-      left: 0;
-      right: 0;
-    }
-  </style>
+  
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="index.css" />
 
   <body>
     <!-- Search bar and button-->
@@ -258,34 +56,5 @@
     </div>
 
     <script src="index.js"></script>
-    <script>
-      function search() {
-        //function to search of the dorm listed
-      }
-      function print() {
-        //prints the top location of height of the search box
-        console.log(
-          document.querySelector(".sorting").getBoundingClientRect().top
-        );
-      }
-      function openForm() {
-        document.getElementById("myForm").style.display = "block";
-      }
-
-      function closeForm() {
-        document.getElementById("myForm").style.display = "none";
-      }
-      function sliders(){
-        //turn on the display if it's off otherwise turn it off
-        if(document.getElementById("wrapper").style.display == "block"){
-          document.getElementById("wrapper").style.display = "none";
-        }
-        else{
-          document.getElementById("wrapper").style.display = "block";
-        }
-        //prints done
-        console.log("done");
-      }
-    </script>
   </body>
 </html>
