--- a/index.html
+++ b/index.html
@@ -12,44 +12,63 @@
     body { font-family: sans-serif, Arial, Helvetica; }
     * { box-sizing: border-box; }
     header {
-      padding: 0.3em;
+      padding: 2em;
+      padding-top: 0.7em;
+      padding-bottom: 0.7em;
       border-bottom: 1px solid;
       display: flex;
       justify-content: space-between;
+      align-items: center;
     }
     header .label {
       font-weight: 700;
       font-size: 20px;
-      /* vertical-align: text-top; */
     }
     header .popup {
       position: fixed;
       background: white;
       border: 1px solid grey;
       margin: 0.5em;
+      /* right: 5%; */
+      /* overflow:  */
     }
     profile .label {
-      border: 1px solid grey;
-      border-radius: 50%;
+      /* display: inline-block; */
+    }
+    header .label img {
       clip-path: circle();
-      background-color: black;
+      background-color: lightgrey;
+      height: 1.5em;
+      width: 1.5em;
+      /* border: 1px solid grey; */
+      /* border-radius: 5; */
+    }
+    header > div { 
+      display: inline-block;
+      vertical-align: text-bottom;
+    }
+    header {
+      vertical-align: middle;
     }
     .hidden { display: none; }
   </style>
 
   <body>
     <header>
+      <div id=logo><div class=label>Logo</div></div>
+      <div id=find-roommates><div class=label>Find roommates</div></div>
+      <div id=favorites><div class=label>Favorites</div></div>
       <div id="chat">
         <div class="label">Chat</div>
         <div id=chatlist class="popup hidden">
-          <div>Option 1</div>
+          <div>Option&nbsp;1</div>
           <div>Option 2</div>
         </div>
       </div>
       <div id=profile>
         <div class="label"><img src='pfp.svg' /></div>
         <div class="popup hidden">
-          <div>Option 1</div>
+          <span>Option&nbsp;&nbsp;&nbsp;1</span>
           <div>Option 2</div>
         </div>
       </div>
@@ -59,11 +78,14 @@
         element.addEventListener('mouseenter', openFunc);
         element.addEventListener('mouseleave', closeFunc ?? openFunc);
       }
-      onHover(document.querySelector(/*'#chat > .label' */ '#chat'), () =>
+      onHover(document.querySelector('#chat'), () =>
         document.querySelector('#chat > .popup').classList.toggle('hidden'));
       // ...
-      document.querySelector('#profile > .label').addEventListener('click', () =>
-        document.querySelector('#profile > .popup').classList.toggle('hidden'));
+      document.querySelector('#profile > .label').addEventListener('click', (ev) => {
+        var popup = document.querySelector('#profile > .popup');
+        popup.classList.toggle('hidden');
+        popup.style['right'] = `${popup.offsetWidth - ev.target.offsetWidth}px`;
+      });
       // ...
     </script>
   </body>
