removed global border-radius (as expected, it was a bad idea)

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     body { font-family: sans-serif, Arial, Helvetica; }
     * { box-sizing: border-box; }
 
-    /* should give everything that rounded look-- but most likely gonna break a bunch of stuff ;-; XD */
-    * { border-radius: 0.3em; }
-
     header {
       padding: 2em;
       padding-top: 0.7em;
@@ -69,6 +66,7 @@
       margin: 0.1em;
       display: inline-block;
       padding: 0.5em;
+      border-radius: 0.5em;
     }
     #login-modal form input[type=submit]:hover {
       background: #AAA2;
