margin between label and popup was bringing back previous dissapearing popup bug. removed margin from popup for now.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       position: fixed;
       background: white;
       box-shadow: 0.05em 0.1em 0.1em lightgrey; 
-      margin: 0.5em;
+      /* margin: 0.5em; */
       padding: 0.5em;
     }
     header .label img {
