--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <div class="values">
         <span id="range1"> 0 </span>
-        <span> &dash; </span>
+        <span id="rangeDash"> &dash; </span>
         <span id="range2"> 100 </span>
       </div>
       <div class="container">
