chaned word "Logo" to "SwiftDorms"

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <body>
     <header>
-      <div id=logo><div class=label>Logo</div></div>
+      <div id=logo><div class=label>SwiftDorms</div></div>
       <div id=find-roommates><div class=label>Find roommates</div></div>
       <div id=favorites><div class=label>Favorites</div></div>
       <div id="chat">
