changed for input names to something more understandable

--- a/createListing.html
+++ b/createListing.html
@@ -44,20 +44,27 @@
     <h2>Create Listing</h2>
     <div>
         <form action="/action_page.php">
-            <label for="fname">Street Address</label><br>
-            <input type="text" name="fname"><br>
-            <label for="lname">City</label><br>
-            <input type="text" name="lname"><br>
-            <label for="lname">State</label><br>
-            <input type="text" name="lname"><br>
-            <label for="lname">Zip Code</label><br>
-            <input type="text" name="lname"><br><br>
-            <label for="lname">Number of Rooms Available:</label><br>
-            <input type="text" name="lname"><br>
-            <label for="lname">Number of Bathrooms:</label><br>
-            <input type="text" name="lname"><br><br>
-            <label for="lname">Monthly rent:</label><br>
-            <input type="text" name="lname"><br><br>
+            <label for="street-addr">Street Address</label><br>
+            <input type="text" name="street-addr"><br>
+
+            <label for="city">City</label><br>
+            <input type="text" name="city"><br>
+
+            <label for="state">State</label><br>
+            <input type="text" name="state"><br>
+
+            <label for="zip-code">Zip Code</label><br>
+            <input type="text" name="zip-code"><br><br>
+
+            <label for="num-rooms">Number of Rooms Available:</label><br>
+            <input type="text" name="num-rooms"><br>
+
+            <label for="num_bathrooms">Number of Bathrooms:</label><br>
+            <input type="text" name="num_bathrooms"><br><br>
+
+            <label for="monthly-rent">Monthly rent:</label><br>
+            <input type="text" name="monthly-rent"><br><br>
+
             <input type="submit" value="Submit">
         </form>
     </div>
